[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "dztimer"
version = "1.0.0"
description = "A beautiful timer from ufomap by Daniel Duberg, nanobind by Qingwen Zhang"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Qingwen Zhang", email = "qzhangcb@connect.ust.hk" },
    { name = "Daniel Duberg", email = "dduberg@kth.se" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/KTH-RPL/dztimer"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
